# optimization_algorithms

./: .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  asset-manifest.json  git_commit_history.csv  index.html  original_algorithms.py  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  repository_enhancement.md
.github/workflows/: publish-docker.yml  publish-python-package.yml  test.yml
docs/: index.md  installation.md  introduction.md
docs/algorithms/: bmr.md  bmwr.md  bwr.md  gotlbo.md  index.md  itlbo.md  jaya.md  mo_bmwr_family.md  multiobjective_tlbo.md  qojaya.md  rao.md  tlbo.md
docs/api/: algorithms.md  index.md
docs/references/: rao_publications.md
frontend/: README.md  package-lock.json  package.json
frontend/public/: CNAME  index.html  manifest.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: AlgorithmSimulator.js  Footer.js  Header.js  VisualizationComponent.js
frontend/src/pages/: AboutPage.js  AlgorithmPage.js  ComparisonPage.js  HomePage.js  PapersPage.js
frontend/src/utils/: algorithmData.js  objectiveFunctions.js
rao_algorithms/: __init__.py  algorithms.py  optimization.py
rust_bindings/: Cargo.toml
rust_bindings/src/: lib.rs
static/css/: main.1dda232f.css  main.1dda232f.css.map  main.8580a1b9.css  main.8580a1b9.css.map
static/js/: main.9a96f154.js.LICENSE.txt
tests/: test_additional_algorithms.py  test_algorithms.py  test_classic_algorithms.py  test_config.py  test_convergence_history.py  test_gotlbo.py  test_new_algorithms.py
tools/scripts/: git_commit_history.py
