[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rao-algorithms"
version = "0.7.0"
description = "High-performance optimization algorithms by Prof. R.V. Rao (Jaya, Rao, TLBO) backed by Rust"
authors = [
    { name = "Sandeep Kunkunuru", email = "sandeep.kunkunuru@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "samyama_optimization" # This will be the import name for the Rust extension
manifest-path = "rust_bindings/Cargo.toml"
