[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rao-algorithms"
version = "0.10.0"
description = "High-performance metaphor-free optimization algorithms by Prof. R.V. Rao (Jaya, Rao-1/2/3, TLBO, BMR, BWR, BMWR, QOJaya, ITLBO, GOTLBO, SAMP-Jaya, EHR-Jaya, QO-Rao, SAPHR, MO-BMR/BWR/BMWR, MO-Rao+DE, NSGA-II) backed by Rust"
authors = [
    { name = "Sandeep Kunkunuru", email = "sandeep.kunkunuru@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rao_algorithms.samyama_optimization"
manifest-path = "rust_bindings/Cargo.toml"
python-source = "."