[package]
name = "samyama-optimization-python"
version = "0.10.0"
edition = "2021"
authors = ["Sandeep Kunkunuru <sandeep@samyama.ai>"]
description = "Python bindings for Samyama Optimization Engine"
license = "Apache-2.0"

[lib]
name = "samyama_optimization"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
samyama-optimization = { git = "https://github.com/samyama-ai/samyama-graph.git", branch = "main" }
# For local dev against unpublished crate changes, swap to:
# samyama-optimization = { path = "../../samyama-graph/crates/samyama-optimization" }
ndarray = "0.15"
numpy = "0.23"
